--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           cxfreeze main.py --target-dir dist --target-name=auto_divine_calc -c
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ runner.os }} Build
+          name: ${{ runner.os }} ${{ matrix.artifact_pattern }} Build
           path: ${{ matrix.artifact_pattern }}
