--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           pip install cx_freeze
       - name: Freeze
         run: |
-          sudo python setup.py build
+          python setup.py build
       - name: Upload Full Artifact
         if: ${{ matrix.upload_lib }}
         uses: actions/upload-artifact@v4
